--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
             <button (click)="search()">Search</button>
         </div>
         <div>
-            <img src="{{book?.information?.cover}}">
+            <img src="{{book?.information?.cover}}" style="width: 200px;">
             <h3>{{book?.title}}</h3>
             <h4>{{book?.author}} &nbsp; {{book?.information?.category}}</h4>
             <p>{{book?.information?.description}}</p>
